--- a/META.yml
+++ b/META.yml
@@ -1,32 +1,35 @@
 ---
-abstract: 'command-line control of test class execution'
+abstract: 'Command-line control of test class execution'
 author:
-  - 'Marcel GrE<uuml>nauer, C<< <marcel@cpan.org> >>'
-build_requires:
-  ExtUtils::MakeMaker: 6.42
-  Test::More: 0.70
+  - 'Marcel Gruenauer <marcel@cpan.org>'
+build_requires: {}
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
-distribution_type: module
-generated_by: 'Module::Install version 0.91'
+  ExtUtils::MakeMaker: 6.11
+generated_by: 'Dist::Zilla version 1.100711'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Test-Class-GetoptControl
-no_index:
-  directory:
-    - inc
-    - t
-    - xt
+provides:
+  Test::Class::GetoptControl:
+    file: lib/Test/Class/GetoptControl.pm
+    version: 1.100860
 requires:
+  Carp: 0
+  English: 0
+  File::Find: 0
+  File::Temp: 0
   Getopt::Inherited: 0
   List::Util: 0
+  Scalar::Util: 0
   Test::Class: 0
-  perl: 5.8.0
+  Test::More: 0.88
+  constant: 0
+  parent: 0
+  perl: 5.008
 resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Test-Class-GetoptControl
   homepage: http://search.cpan.org/dist/Test-Class-GetoptControl/
-  license: http://dev.perl.org/licenses/
-  repository: git://github.com/hanekomu/test-class-getoptcontrol.git
-version: 0.01
+  repository: http://github.com/hanekomu/Test-Class-GetoptControl
+version: 1.100860
